fix: word break in notifications messages

--- a/src/components/notification/notification.scss
+++ b/src/components/notification/notification.scss
@@ -66,6 +66,7 @@
   line-height: 1;
   color: #ffffff;
   white-space: pre-wrap;
+  word-break: break-all;
 }
 
 .second-info-line {
